--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 }
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: $color-black-1;
   background-color: $color-gray-4;
 }
@@ -17,12 +17,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   color: $color-black-2;
 }
 div, span, p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
 }
 h1 {
