--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<div *ngIf="($notify | async)" class="notification" [ngClass]="{'error': ($notify | async)?.error, 'success': ($notify | async)?.success }">
+  <div fxLayout="row" fxLayoutAlign="start center">
+    <p fxFlex>{{($notify | async)?.message || requestFailedErrorMsg}}</p>
+    <div (click)="onClose()" fxFlex="40px">
+      <i class="pi pi-times"></i>
+    </div>
+  </div>
+</div>
+
 <p-toast position="top-center" key="t" (onClose)="onReject()" [baseZIndex]="5000">
   <ng-template let-message pTemplate="message">
     <h4>{{message?.summary}}</h4>
