--- a/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
+++ b/src/app/modules/dashboard/components/dashboard-homeowners-info/dashboard-homeowners-info.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
+<div fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
 
   <!-- personal information -->
   <div>
@@ -13,9 +13,10 @@
           </span>
         </div>
       </div> -->
+      
     </div>
     <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
-      <div class="pi-thumb" fxLayout="row" fxLayoutAlign="start center" fxFlex>
+      <div class="pi-thumb" fxLayout="row" fxLayoutAlign="start start">
         <div fxFlex="150px" class="upload-thumb" fxLayout="row" fxLayoutAlign="start start" tooltipPosition="left" pTooltip="Upload Picture">
           <div>
             <img [src]="svgPath + '24x24/upload.svg'" />
@@ -23,59 +24,59 @@
           </div>
         </div>
 
-        <div fxFlex class="upload-side-text pi-thumb" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
-          <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxFlex class="upload-side-text pi-thumb" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <span>Lastname:</span>
             <span>Fuertes</span>
           </div>
-          <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <span>Firstname:</span>
             <span>Rey</span>
           </div>
-          <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <span>Middlename:</span>
             <span>Senador</span>
           </div>
-          <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+          <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
             <span>Citizenship:</span>
             <span>Filipino</span>
           </div>
         </div>
       </div>
 
-      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="8px">
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Gender:</span>
           <span>Male</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Marital Status:</span>
           <span>Married</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Date of Birth:</span>
           <span>06-10-1985</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Occupation:</span>
           <span>IT Professional</span>
         </div>
       </div>
 
-      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="8px">
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+      <div class="pi-thumb" fxFlex="25" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="10px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Contact No.:</span>
           <span>123454365</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>ID Type:</span>
           <span>Phil health</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>ID No.:</span>
           <span>423 2342 25345</span>
         </div>
-        <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
           <span>Uploaded File:</span>
           <span class="link">driverlicensed_1234.png</span>
         </div>
