--- a/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
+++ b/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
@@ -8,9 +8,6 @@
   display: flex;
   place-content: center flex-start;
   align-items: center;
-  // position: fixed;
-  // width: 100%;
-  // z-index: 9999;
 }
 .user-panel {
   border-radius: 0;
@@ -59,6 +56,15 @@
     height: 50px;
     padding: 0 10px;
     font-size: 14px;
+    div, i {
+      color: $color-gray-2;
+    }
+    .pi {
+      margin-bottom: 3px;
+    }
+    &.is-active > div, &.is-active > i {
+      color: $color-white !important;
+    }
     &:hover {
       color: $color-gray-3 !important;
     }
@@ -71,7 +77,7 @@
   top: -2px;
 }
 .is-active ~ .underlined {
-  background-color: $color-gray-2 !important;
+  background-color: $color-gray-3 !important;
 }
 :host ::ng-deep {
   .p-badge {
