--- a/src/styleguide/variables.scss
+++ b/src/styleguide/variables.scss
@@ -30,6 +30,7 @@ $color-violet: #3f51b5;
 $color-violet-1: #7f90f1;
 $color-pink: #ff4081;
 $color-pink-1: #fe6b9d;
-
+$color-yellow: #f4d849;
+$color-yellow-1: #eeb525;
 
 $box-shadow: 0px 4px 17px -11px rgba(0, 0, 0, 0.25);
