--- a/src/app/modules/on-boarding/container/on-boarding-container.component.scss
+++ b/src/app/modules/on-boarding/container/on-boarding-container.component.scss
@@ -12,8 +12,9 @@ div {
     padding-top: 20px;
     padding-bottom: 5px;
     width: 100%;
+    font-size: 0.8rem;
     button.default {
-      color: $color-black-3 !important;
+      color: $color-black-2 !important;
     }
   }
 }
