--- a/src/styleguide/atoms/button.scss
+++ b/src/styleguide/atoms/button.scss
@@ -1,7 +1,7 @@
 .p-button {
   background: $color-gray-blue;
   max-height: 35px;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 500;
   &.default:hover {
     color: $color-blue !important;
