--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,8 @@
   max-height: 100%;
 }
 .notification {
-  position: absolute;
+  position: fixed;
+  top: 0;
   z-index: 999999 !important;
   width: 100%;
   overflow-y: hidden;
