--- a/src/app/shared/components/cma-multi-select/cma-multi-select.component.html
+++ b/src/app/shared/components/cma-multi-select/cma-multi-select.component.html
@@ -1,3 +1,3 @@
 <ng-container [formGroup]="form">
-  <p-multiSelect [options]="options" [formControlName]="controlName" (onChange)="onChange($event)" [selectionLimit]="2" defaultLabel="Select Filter" optionLabel="label" display="chip"></p-multiSelect>
+  <p-multiSelect [options]="options" [formControlName]="controlName" (onChange)="onChange($event)" defaultLabel="Select Filter" optionLabel="label" display="chip"></p-multiSelect>
 </ng-container>
