--- a/src/styleguide/atoms/menu.scss
+++ b/src/styleguide/atoms/menu.scss
@@ -1,6 +1,8 @@
 .p-menu {
   .p-submenu-header {
     padding: 3px 10px;
+    font-weight: 500;
+    color: $color-gray-blue;
   }
   .p-menuitem-link {
     padding: 10px;
