--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -15,6 +15,7 @@
 @import './atoms/toast';
 @import './atoms/error';
 @import './atoms/menu';
+@import './atoms/tab';
 
 @import './molecules/dialog';
 @import './molecules/panel';
