--- a/src/app/modules/dashboard/components/dashboard-homeowners-vehicles/dashboard-homeowners-vehicle.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-homeowners-vehicles/dashboard-homeowners-vehicle.component.scss
@@ -1,11 +1,8 @@
 @import "src/styleguide/index";
 :host ::ng-deep {
-  .p-datatable.p-datatable-hoverable-rows .p-datatable-tbody > tr:not(.p-highlight):hover {
-    cursor: pointer;
-  }
   .p-paginator {
     max-height: 45px;
-    padding: 10px 0;
+    padding: 10px 0 0;
     .p-paginator-first, .p-paginator .p-paginator-prev, .p-paginator .p-paginator-next, .p-paginator .p-paginator-last {
       min-width: 1rem;
       height: 1rem;
@@ -15,15 +12,21 @@
       height: 2rem;
     }
   }
-  .p-datatable .p-datatable-tbody > tr {
-    background-color: transparent;
-  }
-  .p-datatable .p-datatable-thead >tr > th {
-    padding: 5px;
-    font-weight: 500 !important;
-    font-size: 12px;
-  }
-  .p-datatable .p-datatable-tbody > tr > td {
-    font-size: 13px;
+  .p-datatable {
+    min-height: 120px !important;
+    &.p-datatable-hoverable-rows .p-datatable-tbody > tr:not(.p-highlight):hover {
+      cursor: pointer;
+    }
+    .p-datatable-tbody > tr {
+      background-color: transparent;
+    }
+    .p-datatable-thead >tr > th {
+      padding: 5px;
+      font-weight: 500 !important;
+      font-size: 12px;
+    }
+    .p-datatable-tbody > tr > td {
+      font-size: 13px;
+    }
   }
 }
