--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -19,9 +19,14 @@
       <div class="noselect" fxLayout="row" fxLayoutAlign="start start">
         <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
           <cma-dashboard-on-boarding-panel-content [item]="item"></cma-dashboard-on-boarding-panel-content>
-          <cma-dashboard-on-boarding-panel-document [item]="item"></cma-dashboard-on-boarding-panel-document>
         </div>
         <div></div>
+      </div>
+      <div class="btn-actions" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <i (click)="onApprove(item)" tooltipPosition="left" pTooltip="Approve" class="pi pi-check"></i>
+        <i (click)="onEdit(item?.id)" tooltipPosition="top" pTooltip="Edit" class="pi pi-pencil"></i>
+        <i (click)="onArchived(item)" tooltipPosition="top" pTooltip="Archive" class="pi pi-folder-open"></i>
+        <i (click)="onDelete(item)" tooltipPosition="top" pTooltip="Remove" class="pi pi-trash"></i>
       </div>
     </mat-expansion-panel>
   </mat-accordion>
