--- a/src/app/modules/dialog/components/confirmation/confirmation-dialog.component.html
+++ b/src/app/modules/dialog/components/confirmation/confirmation-dialog.component.html
@@ -8,9 +8,9 @@
     <h2>{{ actionText[data?.action]?.message }}</h2>
   </div>
   <div class="footer">
-    <div *ngIf="!isCloseOnly" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-      <button mat-flat-button class="btn-cancel default" pButton pRipple (click)="dialogRef.close(false)">{{ isYesNoLabels ? ('No') : ('Cancel') }}</button>
-      <button mat-flat-button class="btn-add success" pButton pRipple [ngClass]="{'primary': isColorPrimary}" (click)="dialogRef.close(true)">{{ isYesNoLabels ? ('Yes') : (actionText[data?.action]?.label) }}</button>
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <button mat-flat-button class="btn-cancel default" pButton pRipple (click)="dialogRef.close(false)">{{ 'Cancel' }}</button>
+      <button mat-flat-button class="btn-add success" pButton pRipple (click)="dialogRef.close(true)">{{ (actionText[data?.action]?.label) }}</button>
     </div>
   </div>
 </div>
